# Disconnect-Protection

./: .gitignore  CMakeLists.txt  README.md
conf/: disconnect_protection.conf.dist
src/: DP_loader.cpp  DisconnectProtection.cpp
